@@ -2,6 +2,7 @@
 /* $Id$ */
 
 $charset = 'utf-8';
+$allow_recoding = TRUE;
 $text_dir = 'ltr'; // ('ltr' d'esquerra a dreta, 'rtl' de dreta a esquerra)
 $number_thousands_separator = '.';
 $number_decimal_separator = ',';
@@ -324,7 +325,7 @@ $strHaveToShow = 'Has de triar al menys una columna per mostrar';
 $strHebrew = 'Hebreu';
 $strHelp = 'Ajuda';
 $strHexForBLOB = 'Usa hexadecimal per a BLOB';
-$strHide         = 'Amaga';
+$strHide = 'Amaga';
 $strHideShowAll = 'Amaga/Mostra tot';
 $strHideShowNoRelation = 'Amaga/Mostra taules sense relacions';
 $strHome = 'Inici';
@@ -1003,75 +1004,75 @@ $strZip = '"comprimit amb zip"';
 
 // To translate:
 
-$strPartitionDefinition = 'PARTITION definition';  //to translate
-$strPrivDescTrigger = 'Allows creating and dropping triggers';  //to translate
-$strPrivDescEvent = 'Allows to set up events for the event scheduler';  //to translate
-$strPrivDescProcess = 'Allows viewing processes of all users';  //to translate
-$strPartitioned = 'partitioned';  //to translate
-$strTableAlteredSuccessfully = 'Table %1$s has been altered successfully';  //to translate
-$strDatabaseHasBeenCreated = 'Database %1$s has been created.';  //to translate
-$strTableHasBeenCreated = 'Table %1$s has been created.';  //to translate
-$strForeignKeyError = 'Error creating foreign key on %1$s (check data types)';  //to translate
-$strRowsDeleted = '%1$d row(s) deleted.';  //to translate
-$strRowsAffected = '%1$d row(s) affected.';  //to translate
-$strRowsInserted = '%1$d row(s) inserted.';  //to translate
-$strInsertedRowId = 'Inserted row id: %1$d';  //to translate
-$strIndexesSeemEqual = 'The indexes %1$s and %2$s seem to be equal and one of them could possibly be removed.';  //to translate
-$strPartitionMaintenance = 'Partition maintenance';  //to translate
-$strPartition = 'Partition %s';  //to translate
-$strAnalyze = 'Analyze';  //to translate
-$strCheck = 'Check';  //to translate
-$strOptimize = 'Optimize';  //to translate
-$strRebuild = 'Rebuild';  //to translate
-$strRepair = 'Repair';  //to translate
-$strRemovePartitioning = 'Remove partitioning';  //to translate
-$strSearchInField = 'Inside field:';  //to translate
-$strTexyText = 'Texy! text';  //to translate
-$strDetails = 'Details...';  //to translate
-$strComment = 'Comment';  //to translate
-$strPacked = 'Packed';  //to translate
-$strActions = 'Actions';  //to translate
-$strInterface = 'Interface';  //to translate
-$strSuhosin = 'Server running with Suhosin. Please refer to %sdocumentation%s for possible issues.';  //to translate
-$strEvents = 'Events';  //to translate
-$strForeignKeyRelationAdded = 'FOREIGN KEY relation added';  //to translate
-$strInternalAndForeign = 'An internal relation is not necessary when a corresponding FOREIGN KEY relation exists.';  //to translate
-$strViewHasAtLeast = 'This view has at least this number of rows. Please refer to %sdocumentation%s.';  //to translate
-$strRelationalKey = 'Relational key';  //to translate
-$strRelationalDisplayField = 'Relational display field';  //to translate
-$strSwekeyNoKey = 'No valid authentication key plugged';  //to translate
-$strSwekeyNoKeyId = 'File %s does not contain any key id';  //to translate
-$strSwekeyAuthFailed = 'Hardware authentication failed';  //to translate
-$strSwekeyAuthenticating = 'Authenticating...';  //to translate
-$strPBXTIndexCacheSize = 'Index cache size';  //to translate
-$strPBXTRecordCacheSize = 'Record cache size';  //to translate
-$strPBXTLogCacheSize = 'Log cache size';  //to translate
-$strPBXTLogFileThreshold = 'Log file threshold';  //to translate
-$strPBXTTransactionBufferSize = 'Transaction buffer size';  //to translate
-$strPBXTCheckpointFrequency = 'Checkpoint frequency';  //to translate
-$strPBXTDataLogThreshold = 'Data log threshold';  //to translate
-$strPBXTGarbageThreshold = 'Garbage threshold';  //to translate
-$strPBXTLogBufferSize = 'Log buffer size';  //to translate
-$strPBXTDataFileGrowSize = 'Data file grow size';  //to translate
-$strPBXTRowFileGrowSize = 'Row file grow size';  //to translate
-$strPBXTRowFileGrowSizeDesc = 'The grow size of the row pointer (.xtr) files.';  //to translate
-$strPBXTDataFileGrowSizeDesc = 'The grow size of the handle data (.xtd) files.';  //to translate
-$strPBXTLogBufferSizeDesc = 'The size of the buffer used when writing a data log. The default is 256MB. The engine allocates one buffer per thread, but only if the thread is required to write a data log.';  //to translate
-$strPBXTGarbageThresholdDesc = 'The percentage of garbage in a data log file before it is compacted. This is a value between 1 and 99. The default is 50.';  //to translate
-$strPBXTDataLogThresholdDesc = 'The maximum size of a data log file. The default value is 64MB. PBXT can create a maximum of 32000 data logs, which are used by all tables. So the value of this variable can be increased to increase the total amount of data that can be stored in the database.';  //to translate
-$strPBXTCheckpointFrequencyDesc = 'The amount of data written to the transaction log before a checkpoint is performed. The default value is 24MB.';  //to translate
-$strPBXTTransactionBufferSizeDesc = 'The size of the global transaction log buffer (the engine allocates 2 buffers of this size). The default is 1MB.';  //to translate
-$strPBXTLogFileThresholdDesc = 'The size of a transaction log before rollover, and a new log is created. The default value is 16MB.';  //to translate
-$strPBXTLogCacheSizeDesc = 'The amount of memory allocated to the transaction log cache used to cache on transaction log data. The default is 16MB.';  //to translate
-$strPBXTRecordCacheSizeDesc = 'This is the amount of memory allocated to the record cache used to cache table data. The default value is 32MB. This memory is used to cache changes to the handle data (.xtd) and row pointer (.xtr) files.';  //to translate
-$strPBXTIndexCacheSizeDesc = 'This is the amount of memory allocated to the index cache. Default value is 32MB. The memory allocated here is used only for caching index pages.';  //to translate
-$strPBXTLogFileCount = 'Log file count';  //to translate
-$strPBXTLogFileCountDesc = 'This is the number of transaction log files (pbxt/system/xlog*.xt) the system will maintain. If the number of logs exceeds this value then old logs will be deleted, otherwise they are renamed and given the next highest number.';  //to translate
-$strAsDefined = 'As defined:';  //to translate
-$strWiki = 'Wiki';  //to translate
-$strWebServer = 'Web server';  //to translate
-$strPHPExtension = 'PHP extension';  //to translate
-$strCustomColor = 'Custom color';  //to translate
+$strPartitionDefinition = 'Definicio de PARTICIÓ';
+$strPrivDescTrigger = 'Permet crear i eliminar disparadors (triggers)';
+$strPrivDescEvent = 'Permet establir events per al planificador d\'events';
+$strPrivDescProcess = 'Permet veure processos de tots els usuaris';
+$strPartitioned = 'particionat';
+$strTableAlteredSuccessfully = 'S\'ha modificat la taula %1$s correctament';
+$strDatabaseHasBeenCreated = 'S\'ha creat la base de dades %1$s.';
+$strTableHasBeenCreated = 'S\'ha creat la taula %1$s.';
+$strForeignKeyError = 'Error creant clau externa (foreign key) a %1$s (comprovar tipus de dades)';
+$strRowsDeleted = '%1$d fila(es) esborrada(es).';
+$strRowsAffected = '%1$d fila(es) afectada(es).';
+$strRowsInserted = '%1$d fila(es) inserida(es).';
+$strInsertedRowId = 'Id de la fila inserida: %1$d';
+$strIndexesSeemEqual = 'Els indexos %1$s i %2$s semblen iguals i un d\'ells possiblement es podria esborrar.';
+$strPartitionMaintenance = 'Manteniment de particions';
+$strPartition = 'Particio %s';
+$strAnalyze = 'Analitza';
+$strCheck = 'Comprova';
+$strOptimize = 'Optimitza';
+$strRebuild = 'Reconstrueix';
+$strRepair = 'Repara';
+$strRemovePartitioning = 'Eliminar particionament';
+$strSearchInField = 'Camp interior:';
+$strTexyText = 'Text Texy!';
+$strDetails = 'Detalls...';
+$strComment = 'Comentari';
+$strPacked = 'Comprimit';
+$strActions = 'Accions';
+$strInterface = 'Interficie';
+$strSuhosin = 'Servidor executant-se amb Suhosin. Si us plau, consulta %sdocumentation% per a possibles assumptes.';
+$strEvents = 'Events';
+$strForeignKeyRelationAdded = 'Afegida relació de FOREIGN KEY';
+$strInternalAndForeign = 'No es necessita una relació interna quan existeix una relació corresponent de FOREIGN KEY.';
+$strViewHasAtLeast = 'Aquesta vista té al menys aques nombre de files. Consulta %sdocumentation%.';
+$strRelationalKey = 'Clau relacional';
+$strRelationalDisplayField = 'Camp relacional per mostrar';
+$strSwekeyNoKey = 'Cap clau d\'autenticació vàlida endollada';
+$strSwekeyNoKeyId = 'L \'arxiu %s no conté cap identificació de clau';
+$strSwekeyAuthFailed = 'Error a l\'autenticació de maquinari';
+$strSwekeyAuthenticating = 'Autenticant...';
+$strPBXTIndexCacheSize = 'Tamany del cau d\'index';
+$strPBXTRecordCacheSize = 'Tamany del cau de registre';
+$strPBXTLogCacheSize = 'Tamany del cau del Registre (Log)';
+$strPBXTLogFileThreshold = 'LLindar de l\'arxiu de Registre (Log)';
+$strPBXTTransactionBufferSize = 'Tamany de la memòria intermèdia de transaccions';
+$strPBXTCheckpointFrequency = 'Frequència dels controls';
+$strPBXTDataLogThreshold = 'Llindar del registre de dades (Data log)';
+$strPBXTGarbageThreshold = 'Llindar de les escombraries';
+$strPBXTLogBufferSize = 'Tamany de la memòria intermèdia del Registre';
+$strPBXTDataFileGrowSize = 'Tamany de creixement de l\'arxiu de dades';
+$strPBXTRowFileGrowSize = 'Tamany de creixement de l\'arxiu de files';
+$strPBXTRowFileGrowSizeDesc = 'El tamany de creixement dels arxius d\'indicadors de fila (.xtr).';
+$strPBXTDataFileGrowSizeDesc = 'El tamany de creixement dels arxius del gestor de dades (.xtd).';
+$strPBXTLogBufferSizeDesc = 'El tamany de la memòria intermèdia usada quan s\'escriu un registre de dades. El valor per defecte és 256MB. El motor assigna una memòria intermèdia per fil, però només si es requereix el fil per escriure un registre de dades.';
+$strPBXTGarbageThresholdDesc = 'El percentatge d\'escombraries en un registre de dades abans de compactar. És un valor entre 1 i 99. El valor per defecte és 50.';
+$strPBXTDataLogThresholdDesc = 'El tamany màxim d\'un arxiu de registre de dades. El valor per defecte és 64MB. PBXT pot crear un màxim de 32000 registres de dades, que s\'utilitzen per totes les taules. Així el valor d\'aquesta variable es pot augmentar per augmentar la quantitat total de dades que es poden emmagatzemar en la base de dades.';
+$strPBXTCheckpointFrequencyDesc = 'La quantitat de dades escrites al registre de transaccions abans de executar un control. El valor per defecte és 24MB.';
+$strPBXTTransactionBufferSizeDesc = 'El tamany de la memòria intermèdia global del registre de transaccions (el motor assigna 2 memòries intermèdies d\'aquest tamany). El valor per defecte és 1MB.';
+$strPBXTLogFileThresholdDesc = 'El tamany del registre de transaccions abans d\'un ajornament, i un nou registre es crea. El valor per defecte és 16MB.';
+$strPBXTLogCacheSizeDesc = 'La quantitat de memòria assignada al cau del registre de transaccions usat en registres de transacció de dades. El valor per defecte és 16MB.';
+$strPBXTRecordCacheSizeDesc = 'Aquest és el tamany de memòria assingnada al cau de registres usat com a cau de dades de taula. El valor per defecte és 32MB. Aquesta memòria s\'utilitza com a cau de canvis dels arxius del gestor de dades (.xtd) i indicadors de fila (.xtr).';
+$strPBXTIndexCacheSizeDesc = 'Aquest és el tamany de memòria assingnada al cau d\'indexos. El valor per defecte és 32MB. La memòria assignada aqui només s\'utilitza per cau de pàgines d\'index.';
+$strPBXTLogFileCount = 'Comptador de l\'arxiu de registre';
+$strPBXTLogFileCountDesc = 'Aquest és el nombre d\'arxius de registre de transaccions (pbxt/system/xlog*.xt) que el sistema mantindrà. Si el nombre de registres supera aquest valor, llavors els registres vells s\'esborraràn, altrament es reanomenaràn i es donarà el pròxim número més alt.';
+$strAsDefined = 'Com definit:';
+$strWiki = 'Wiki';
+$strWebServer = 'Servidor Web';
+$strPHPExtension = 'Extensió PHP';
+$strCustomColor = 'Color triat';
 $strBLOBRepository = 'BLOB Repository';  //to translate
 $strBLOBRepositoryDamaged = 'Damaged';  //to translate
 $strBLOBRepositoryDisableAreYouSure = 'Are you sure you want to disable all BLOB references for database %s?';  //to translate
