@@ -29,6 +29,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 
 3.0.1.0 (not yet released)
 - bug #2134126 [GUI] SQL error after sorting a subset 
++ [lang] Catalan update, thanks to Xavier Navarro
 
 3.0.0.0 (2008-09-27)
 + [export] properly handle line breaks for YAML, thanks to Dan Barry -
